packages/llvm/src/tests/snapshots/llvm__tests__naked_expression__    function foo(x : number) : number {        return x + 1;    }        foo(1);    .snap
---
source: packages/llvm/src/tests/naked_expression.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %"|_temp0" = alloca double, align 8
  %"0" = call double @foo_(double 1.000000e+00)
  store double %"0", double* %"|_temp0", align 8
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

define double @foo_(double %0) {
main:
  %x_ = alloca double, align 8
  store double %0, double* %x_, align 8
  %"2" = load double, double* %x_, align 8
  %"1" = fadd double %"2", 1.000000e+00
  ret double %"1"
}

